--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,98 +1,134 @@
 {
-  "_comment": "CMakeSettings.json for CMake integration with Visual Studio 2017. See https://go.microsoft.com//fwlink//?linkid=834763 for more information about this file.",
-
   "environments": [
-    {
-      "BuildDir": "${workspaceRoot}\\_build"
-    },
-    {
-      "InstallDir": "${workspaceRoot}\\_install"
-    }
+    { "BuildDir": "${workspaceRoot}\\_build" },
+    { "InstallDir": "${workspaceRoot}\\_install" },
+    { "DEFAULT_BUILD_TESTING": "OFF" },
+    { "DEFAULT_ENABLE_BENCHMARK_TESTS": "OFF" },
+    { "DEFAULT_ENABLE_BENCHMARK_RUN": "OFF" }
   ],
-
   "configurations": [
     {
-      "name": "x86-Debug",
-      "generator": "Visual Studio 15 2017",
-      "configurationType": "Debug",
-      "inheritEnvironments": [ "msvc_x86" ],
-      "buildRoot": "${env.BuildDir}\\${name}",
-      "installRoot": "${env.InstallDir}\\${name}",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "/m",
-      "ctestCommandArgs": "",
-      "variables": [
-        {
-          "name": "ENABLE_BENCHMARK_TESTS",
-          "value": "OFF"
-        },
-        {
-          "name": "ENABLE_BENCHMARK_RUN",
-          "value": "OFF"
-        }
-      ]
-    },
-    {
-      "name": "x86-Release",
-      "generator": "Visual Studio 15 2017",
-      "configurationType": "Release",
-      "inheritEnvironments": [ "msvc_x86" ],
-      "buildRoot": "${env.BuildDir}\\${name}",
-      "installRoot": "${env.InstallDir}\\${name}",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "/m",
-      "ctestCommandArgs": "",
-      "variables": [
-        {
-          "name": "ENABLE_BENCHMARK_TESTS",
-          "value": "OFF"
-        },
-        {
-          "name": "ENABLE_BENCHMARK_RUN",
-          "value": "ON"
-        }
-      ]
-    },
-    {
-      "name": "x64-Debug",
-      "generator": "Visual Studio 15 2017 Win64",
+      "name": "x64-Debug-Ninja",
+      "generator": "Ninja",
       "configurationType": "Debug",
       "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${env.BuildDir}\\${name}",
       "installRoot": "${env.InstallDir}\\${name}",
       "cmakeCommandArgs": "",
-      "buildCommandArgs": "/m",
+      "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        {
-          "name": "ENABLE_BENCHMARK_TESTS",
-          "value": "OFF"
-        },
-        {
-          "name": "ENABLE_BENCHMARK_RUN",
-          "value": "ON"
-        }
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
       ]
     },
     {
-      "name": "x64-Release",
-      "generator": "Visual Studio 15 2017 Win64",
-      "configurationType": "Release",
+      "name": "x64-Release-Ninja",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
       "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${env.BuildDir}\\${name}",
       "installRoot": "${env.InstallDir}\\${name}",
       "cmakeCommandArgs": "",
-      "buildCommandArgs": "/m",
+      "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        {
-          "name": "ENABLE_BENCHMARK_TESTS",
-          "value": "OFF"
-        },
-        {
-          "name": "ENABLE_BENCHMARK_RUN",
-          "value": "ON"
-        }
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x86-Debug-Ninja",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "-v",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x86-Release-Ninja",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "-v",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x64-Debug-VS2019",
+      "generator": "Visual Studio 16 2019 Win64",
+      "configurationType": "Debug",
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "buildCommandArgs": "-m",
+      "cmakeCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x64-Release-VS2019",
+      "generator": "Visual Studio 16 2019 Win64",
+      "configurationType": "Release",
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "buildCommandArgs": "-m",
+      "cmakeCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x86-Debug-VS2019",
+      "generator": "Visual Studio 16 2019",
+      "configurationType": "Debug",
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "buildCommandArgs": "-m",
+      "cmakeCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
+      ]
+    },
+    {
+      "name": "x86-Release-VS2019",
+      "generator": "Visual Studio 16 2019",
+      "configurationType": "Release",
+      "buildRoot": "${env.BuildDir}\\${name}",
+      "installRoot": "${env.InstallDir}\\${name}",
+      "buildCommandArgs": "-m",
+      "cmakeCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        { "name": "BUILD_TESTING", "value": "${env.DEFAULT_BUILD_TESTING}"},
+        { "name": "ENABLE_BENCHMARK_TESTS", "value": "${env.DEFAULT_ENABLE_BENCHMARK_TESTS}" },
+        { "name": "ENABLE_BENCHMARK_RUN", "value": "${env.DEFAULT_ENABLE_BENCHMARK_RUN}" }
       ]
     }
   ]
